# debugger

./: CMakeLists.txt  README.md  install.sh  test_functionality.sh  test_program  test_program.c
include/: debugger_engine.h  decompiler.h  disassembler.h  elf_parser.h  main_window.h
src/: main.cpp
src/core/: project.cpp  symbol_table.cpp  utils.cpp
src/debugger/: breakpoint.cpp  debugger.cpp  memory_manager.cpp  process_control.cpp
src/decompiler/: ast_builder.cpp  decompiler.cpp  pattern_matcher.cpp
src/disassembler/: architecture.cpp  disassembler.cpp  elf_parser.cpp
src/gui/: debugger_view.cpp  decompiler_view.cpp  disassembly_view.cpp  main_window.cpp  memory_view.cpp  registers_view.cpp
